updating MIA and inference endpoints
